tests/ui/rfcs/rfc-2632-const-trait-impl/const-bound-on-not-const-associated-fn.stderr
error: `~const` is not allowed here
  --> $DIR/const-bound-on-not-const-associated-fn.rs:10:40
   |
LL |     fn do_something_else() where Self: ~const MyTrait;
   |                                        ^^^^^^
   |
note: this function is not `const`, so it cannot have `~const` trait bounds
  --> $DIR/const-bound-on-not-const-associated-fn.rs:10:8
   |
LL |     fn do_something_else() where Self: ~const MyTrait;
   |        ^^^^^^^^^^^^^^^^^

error: `~const` is not allowed here
  --> $DIR/const-bound-on-not-const-associated-fn.rs:21:32
   |
LL |     pub fn foo(&self) where T: ~const MyTrait {
   |                                ^^^^^^
   |
note: this function is not `const`, so it cannot have `~const` trait bounds
  --> $DIR/const-bound-on-not-const-associated-fn.rs:21:12
   |
LL |     pub fn foo(&self) where T: ~const MyTrait {
   |            ^^^

error: using `#![feature(effects)]` without enabling next trait solver globally
   |
   = note: the next trait solver must be enabled globally for the effects feature to work correctly
   = help: use `-Znext-solver` to enable

error: aborting due to 3 previous errors

